[metadata]
name = hadolint_py
description = Making hadolint pip installable (https://github.com/hadolint/hadolint)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleksaC/hadolint-py
author = Aleksa Cukovic
author_email = aleksacukovic1@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
